; ModuleID = '/home/carl/AnghaBench/linux/drivers/hsi/clients/extr_hsi_char.c_hsc_rx_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hsi/clients/extr_hsi_char.c_hsc_rx_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hsi_client = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }
%struct.hsc_rx_config = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hsi_client*, %struct.hsc_rx_config*)* @hsc_rx_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hsc_rx_get(%struct.hsi_client* %0, %struct.hsc_rx_config* %1) #0 {
  %3 = alloca %struct.hsi_client*, align 8
  %4 = alloca %struct.hsc_rx_config*, align 8
  store %struct.hsi_client* %0, %struct.hsi_client** %3, align 8
  store %struct.hsc_rx_config* %1, %struct.hsc_rx_config** %4, align 8
  %5 = load %struct.hsi_client*, %struct.hsi_client** %3, align 8
  %6 = getelementptr inbounds %struct.hsi_client, %struct.hsi_client* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.hsc_rx_config*, %struct.hsc_rx_config** %4, align 8
  %10 = getelementptr inbounds %struct.hsc_rx_config, %struct.hsc_rx_config* %9, i32 0, i32 2
  store i32 %8, i32* %10, align 4
  %11 = load %struct.hsi_client*, %struct.hsi_client** %3, align 8
  %12 = getelementptr inbounds %struct.hsi_client, %struct.hsi_client* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.hsc_rx_config*, %struct.hsc_rx_config** %4, align 8
  %16 = getelementptr inbounds %struct.hsc_rx_config, %struct.hsc_rx_config* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  %17 = load %struct.hsi_client*, %struct.hsi_client** %3, align 8
  %18 = getelementptr inbounds %struct.hsi_client, %struct.hsi_client* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.hsc_rx_config*, %struct.hsc_rx_config** %4, align 8
  %22 = getelementptr inbounds %struct.hsc_rx_config, %struct.hsc_rx_config* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
